force-app/main/default/objects/Tiered_Pricing__c/Tiered_Pricing__c.object-meta.xml
<CustomObject>
    <description>Related object to Salesforce Product that assigns a Price Book to a volume discount schedule.</description>
    <label>Tiered Pricing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiered Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>