force-app/main/default/objects/Tiered_Pricing__c/fields/Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id__c</fullName>
    <label>Price Book Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>