force-app/main/default/objects/Tiered_Pricing__c/fields/PriceBookName__c.field-meta.xml
<CustomField>
    <fullName>PriceBookName__c</fullName>
    <label>Price Book</label>
    <length>80</length>
    <type>Text</type>
</CustomField>