force-app/main/default/objects/Tiered_Pricing__c/fields/PriceBookNameLink__c.field-meta.xml
<CustomField>
    <fullName>PriceBookNameLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Pricebook2Id__c,  PriceBookName__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>