force-app/main/default/objects/Tiered_Pricing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Volume, if Blank, will use the Tier Price as the Sales Prices for the Quantity.

Slab will calculate the Sales Price based on the all Tier Prices at and below the Quantity.</description>
    <inlineHelpText>Volume, if Blank, will use the Tier Price as the Sales Prices for the Quantity

Slab will calculate the Sales Price based on all Tier Prices at and below the Quantity</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
                <default>true</default>
                <label>Volume</label>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>